Use isJvm() to disable specific Js test cases when running on the JVM
This CL follows https://github.com/google/j2cl/commit/2a8531cf0cb3137000f596a158ca0b506d974eb7 - extending the integration_test() macro to run tests on the JVM.

PiperOrigin-RevId: 482056466